<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.vortexcreativaapp.practica.MainActivity">


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Titulo"
    android:id="@+id/txtTitulo"
    android:gravity="center"
    android:textSize="@dimen/Titulo"
    />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/txtBlanco"
    android:gravity="center"
    />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/txtBlanco1"
    android:gravity="center"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nombre"
    android:id="@+id/txtNombre"
    />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/txtBlanco2"
    android:gravity="center"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Fecha_nacimiento"
    android:id="@+id/txtFecha" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/txtBlanco32"
    android:gravity="center"
    />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Email"
    android:id="@+id/txtTel"
    android:layout_gravity="center_vertical"
    />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/txtBlanco3"
    android:gravity="center"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Email"
    android:id="@+id/txtEmail"
    android:layout_gravity="center_vertical"
    />


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/txtBlanco4"
    android:gravity="center"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Descrip"
    android:id="@+id/txtDescripcion"
    android:layout_gravity="center_vertical"
    />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/txtBlanco5"
    android:gravity="center"
    />

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Editar_datos"
    android:id="@+id/btnEditar"
    />

</LinearLayout>

